--- a/allifmaalcommonapp/templates/allifmaalcommonapp/branches/branches.html
+++ b/allifmaalcommonapp/templates/allifmaalcommonapp/branches/branches.html
@@ -114,7 +114,7 @@
             </div>
             <div class="dropdown allif-confirm-action">
               
-              <a href="{% url 'allifmaalcommonapp:commonBranches' user_var glblslug %}" id="allif-confirm-delete">No</a><span><strong> | </strong></span>
+              <a href="{% url 'allifmaalcommonapp:commonBranches' user_var glblslug %}" id="allif-table-drop-item-link">No</a><span><strong> | </strong></span>
               <a href="{% url 'allifmaalcommonapp:commonDeleteBranch' item.id user_var glblslug %}" id="allif-confirm-delete">Confirm</a>
             </div>
   
