--- a/allifmaalcommonapp/templates/allifmaalcommonapp/departments/departments.html
+++ b/allifmaalcommonapp/templates/allifmaalcommonapp/departments/departments.html
@@ -85,7 +85,7 @@
           </div>
           <div class="dropdown allif-confirm-action">
             
-            <a href="{% url 'allifmaalcommonapp:commonDepartments' user_var glblslug %}" id="allif-confirm-delete">No</a><span><strong> | </strong></span>
+            <a href="{% url 'allifmaalcommonapp:commonDepartments' user_var glblslug %}" id="allif-table-drop-item-link">No</a><span><strong> | </strong></span>
             <a href="{% url 'allifmaalcommonapp:commonDeleteDepartment' item.id user_var glblslug %}" id="allif-confirm-delete">Confirm</a>
           </div>
 
