--- a/allifmaalcommonapp/templates/allifmaalcommonapp/hrm/staff/staff.html
+++ b/allifmaalcommonapp/templates/allifmaalcommonapp/hrm/staff/staff.html
@@ -158,7 +158,7 @@
           </div>
           <div class="dropdown allif-confirm-action">
             
-            <a href="{% url 'allifmaalcommonapp:commonhrm' user_var glblslug %}" id="allif-confirm-delete">No</a><span><strong> | </strong></span>
+            <a href="{% url 'allifmaalcommonapp:commonhrm' user_var glblslug %}" id="allif-table-drop-item-link">No</a><span><strong> | </strong></span>
             <a href="{% url 'allifmaalcommonapp:commonDeleteUser' item.id user_var glblslug %}" id="allif-confirm-delete">Confirm</a>
           </div>
 
