--- a/allifmaalcommonapp/templates/allifmaalcommonapp/divisions/division-details.html
+++ b/allifmaalcommonapp/templates/allifmaalcommonapp/divisions/division-details.html
@@ -248,7 +248,7 @@
           </div>
           <div class="dropdown allif-confirm-action">
             
-            <a href="{% url 'allifmaalcommonapp:commonDivisionDetails' allifquery.id user_var glblslug %}" id="allif-confirm-delete">No</a><span><strong> | </strong></span>
+            <a href="{% url 'allifmaalcommonapp:commonDivisionDetails' allifquery.id user_var glblslug %}" id="allif-table-drop-item-link">No</a><span><strong> | </strong></span>
             <a href="{% url 'allifmaalcommonapp:commonDeleteBranch' item.id user_var glblslug %}" id="allif-confirm-delete">Confirm</a>
           </div>
 
