--- a/allifmaalcommonapp/templates/allifmaalcommonapp/divisions/divisions.html
+++ b/allifmaalcommonapp/templates/allifmaalcommonapp/divisions/divisions.html
@@ -74,7 +74,7 @@
           </div>
           <div class="dropdown allif-confirm-action">
             
-            <a href="{% url 'allifmaalcommonapp:commonDivisions' user_var glblslug %}" id="allif-confirm-delete">No</a><span><strong> | </strong></span>
+            <a href="{% url 'allifmaalcommonapp:commonDivisions' user_var glblslug %}" id="allif-table-drop-item-link">No</a><span><strong> | </strong></span>
             <a href="{% url 'allifmaalcommonapp:commonDeleteDivision' item.id user_var glblslug %}" id="allif-confirm-delete">Confirm</a>
           </div>
 
