--- a/allifmaalcommonapp/templates/allifmaalcommonapp/hrm/users/user-delete-confirm.html
+++ b/allifmaalcommonapp/templates/allifmaalcommonapp/hrm/users/user-delete-confirm.html
@@ -1,4 +1,3 @@
-
 {% extends 'allifmaalcommonapp/base/uimainbase/allifmaaluibase.html'%}
 {% load humanize %}
 {% block title %}
@@ -8,6 +7,8 @@
 {%endblock%}
 {% block body %}
 
+<div class="allifmaincontainer">
+  
 <!--start....main headere-->
 <div class="card-header">
 
@@ -16,40 +17,8 @@
 <div class="col-md-12"><!--start....header column-->
 
 <div class="container-fluid amel-content-header">
-  
   <a href="{% url 'allifmaalcommonapp:commonHome' user_var glblslug %}">Home</a>
-  
-  
-
-<a href="{% url 'allifmaalcommonapp:commonhrm' user_var glblslug %}">HRM</a>
-
-<div class="dropdown allifmaal-content-dropdown">
-  <a class="dropdown-toggle" type="button" id="dropdownMenuButton1" data-bs-toggle="dropdown" aria-expanded="false">
-  Accounts
-  </a>
-  <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
-    <div class="content-dropdown-menu">
-    <li><a class="dropdown-item" href="{% url 'allifmaalcommonapp:commonGeneralLedgers' user_var glblslug %}">GL Accounts</a></li>
-    <li><a class="dropdown-item" href="{% url 'allifmaalcommonapp:commonChartofAccounts' user_var glblslug %}">Chart of A/Cs</a></li>
-    
-    </div>
-  </ul>
-</div>
-<a href="{% url 'allifmaalcommonapp:commonSuppliers' user_var glblslug %}" >Suppliers</a>
-<div class="dropdown allifmaal-content-dropdown">
-  <a class="dropdown-toggle" type="button" id="dropdownMenuButton1" data-bs-toggle="dropdown" aria-expanded="false">
-  Banks
-  </a>
-  <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
-    <div class="content-dropdown-menu">
-    <li><a  class="dropdown-item" href="{% url 'allifmaalcommonapp:commonBanks' user_var glblslug %}">Banks</a></li>
-    <li><a  class="dropdown-item" href="{% url 'allifmaalcommonapp:commonBankShareholderDeposits' user_var glblslug %}">Deposits</a>
-      </li>
-    <li><a href="{% url 'allifmaalcommonapp:commonBankWithdrawals' user_var glblslug %}">Withdrawals</a></li>
-    </div>
-  </ul>
-</div>
-<a href="{% url 'allifmaalcommonapp:commonDepartments' user_var glblslug %}">Departments</a>
+<a href="{% url 'allifmaalcommonapp:commonhrm' user_var glblslug %}">Employees</a>
 </div>
 
     </div><!--end....header column-->
@@ -60,159 +29,159 @@
 
 
 <!--start of main body-->
-<div class="allifmaincontainer">
+<div class="allif-content-spacer"></div>
 
-    <div class="row mt-12"> <!--start....table row-->
-  
-        <div class="allif-details-container">
-          <div class="row"><!--start of row div --->
-          
-            <!--start of column two-->
-            <div class="col-md-4">
-              <div class="allif-details-card ">
-                <!--start of the table here-->
-              <table class="table allif-details-table table-layout">
-                <tbody>
-              <tr>
-                <td>First Name</td>
-                <td>{{allifquery.first_name}}</td>
-            
-                </tr>
-            
-              <tr>
-                <td>Last Name</td>
-                <td>{{allifquery.last_name}}</td>
-            
-                </tr>
-              <tr>
-                <td>Category</td>
-                <td>{{allifquery.user_category}}</td>
-            
-                </tr>
-                <tr>
-                    <td>Email</td>
-                    <td>{{allifquery.email}}</td>
-                    
-                  </tr>
-              </tbody>
-              </table>
-            
-              </div>
-                  </div>
-          
-               
-           <!--start of column two-->
-           <div class="col-md-4">
-            <div class="allif-details-card ">
-              <!--start of the table here-->
-            <table class="table table-layout allif-details-table">
-              <tbody>
-           
-            <tr>
-              <td>Active</td>
-              <td>{{allifquery.is_active}}</td>
-              
-            </tr>
-            <tr>
-              <td>Authenticated</td>
-              <td>{{allifquery.is_authenticated}}</td>
-          
-              </tr>
-              <tr>
-                <td>Staff</td>
-                <td>{{allifquery.is_staff}}</td>
-          
-                </tr>
-            <tr>
-              <td>Superuser</td>
-              <td>{{allifquery.is_superuser}}</td>
-        
-            </tr>
-            </tbody>
-            </table>
-          
-            </div>
-                </div>
-          
-          
-           <!--start of column two-->
-           <div class="col-md-4">
-            <div class="allif-details-card ">
-              <!--start of the table here-->
-            <table class="table table-layout allif-details-table">
-              <tbody>
-        <tr>
-        <td>Last Login</td>
-        <td>{{allifquery.last_login|date:'d/m/Y'}}</td>
+
+<div class="row mt-12"> <!--start....table row-->
+  <div class="delete-confirmation-header">Do you want to delete {{allifquery}}?</div>
+  <div class="col-md-12"> <!--start....table column-->
+  <div class="allif-scroll-table">
+    <div class="allif-info-tables">
+      <div class="row"><!--start of row div --->
+  <!--start of column two-->
+  <div class="col-md-4">
+    
+      <!--start of the table here-->
+      <div class="table-responsive">
+      <table class="table table-layout">
+      <tbody>
+      <tr>
+        <td class="allif-fix-table-col">First Name</td>
+        <td>{{allifquery.first_name}}</td>
     
         </tr>
-                   
-            <tr>
-              <td>Joined On</td>
-              <td>{{allifquery.date_joined|date:'d/m/Y'}}</td>
+       
+        </tbody>
+        </table>
+      </div>
+        </div>
+           
+    
+     <!--start of column two-->
+     <div class="col-md-4">
+       <!--start of the table here-->
+       <div class="allif-details-card table-responsive">
+       <table class="table table-layout">
+        <tbody>
+          <tr>
+            <td class="allif-fix-table-col">Last Name</td>
+            <td>{{allifquery.last_name}}</td>
+        
             </tr>
           
-            </tbody>
-            </table>
-          
+          </tbody>
+          </table>
           </div>
-        </div>
-          
-          </div><!--end of row div --->
-            
-              </div>
-    
-    </div><!--end....table row-->
-    
-    <!--end of table-->
-
-<!--end of table-->
-<hr>
-<div class="row mt-12"> <!--start....table row-->
-   
-    <div class="allif-details-container">
-      <div class="row"><!--start of row div --->
-      
-        <!--start of column two-->
-    <div class="col-md-4">
-        <div class="delete-options-container">
-        <a href="{% url 'allifmaalcommonapp:commonhrm' user_var glblslug %}">No</a>
-
           </div>
-              </div>
-      
-           
-       <!--start of column two-->
-       <div class="col-md-4">
-        <div class="delete-options-container">
     
-        <a href="{% url 'allifmaalcommonapp:commonhrm' user_var glblslug %}">Back</a>
 
-        </div>
-            </div>
-      
-      
-       <!--start of column two-->
-       <div class="col-md-4">
-        <div class="delete-options-container-delete">
-          
-        <a href="{% url 'allifmaalcommonapp:commonDeleteUser' allifquery.id user_var glblslug %}">Yes</a>
-      </div>
-    </div>
-      
-      </div><!--end of row div --->
+     <!--start of column two-->
+     <div class="col-md-4">
+      <div class="allif-details-card table-responsive">
+       <!--start of the table here-->
+       <table class="table table-layout">
+        <tbody>
+          <tr>
+            <td class="allif-fix-table-col">Email</td>
+            <td>{{allifquery.email}}</td>
         
-          </div>
+            </tr>
+            
+    
+  
+          </tbody>
+          </table>
+  </div>
+    </div>
+    </div><!--end of row div --->
+      
+        </div>
 
 </div><!--end....table row-->
-
+</div>
 <!--end of table-->
-<hr>
 
+</div><!--end of main container of the page....-->
+
+<div class="row mt-12"> <!--start....table row-->
+  
+  <div class="col-md-12"> <!--start....table column-->
+  <div class="allif-scroll-table">
+    <div class="allif-info-tables">
+      <div class="row"><!--start of row div --->
+  <!--start of column two-->
+  <div class="col-md-4">
+    
+      <!--start of the table here-->
+      <div class="table-responsive">
+      <table class="table table-layout">
+      <tbody>
+    <tr>
+        <td>
+        <div class="delete-options-container">
+          <a href="{% url 'allifmaalcommonapp:commonhrm' user_var glblslug %}">Back</a>
+        </div>
+        </td>
+      </tr>
+       
+        </tbody>
+        </table>
+      </div>
+        </div>
+           
+    
+     <!--start of column two-->
+     <div class="col-md-4">
+       <!--start of the table here-->
+       <div class="allif-details-card table-responsive">
+       <table class="table table-layout">
+        <tbody>
+          <tr>
+            <td>
+            <div class="delete-options-container">
+              <a href="{% url 'allifmaalcommonapp:commonhrm' user_var glblslug %}">No</a>
+            </div>
+            </td>
+          </tr>
+           
+         
+          </tbody>
+          </table>
+          </div>
+          </div>
+    
+    
+     <!--start of column two-->
+     <div class="col-md-4">
+      <div class="allif-details-card table-responsive">
+       <!--start of the table here-->
+       <table class="table table-layout">
+        <tbody>
+          <tr>
+            <td>
+            <div class="delete-options-container">
+              <a href="{% url 'allifmaalcommonapp:commonDeleteUser' allifquery.id user_var glblslug %}" class="body-delete-link">Yes</a></li>
+            </div>
+            </td>
+          </tr>
+          </tbody>
+          </table>
+  </div>
+    </div>
+    </div><!--end of row div --->
+      
+        </div>
+
+</div><!--end....table row-->
+</div>
+<!--end of table-->
+
+</div><!--end of main container of the page....-->
 
 </div>
+
   {% block scripts %}
 
   {% endblock %}
    {% endblock %}
- 
+   
