--- a/allifmaalcommonapp/templates/allifmaalcommonapp/hrm/users/user-details.html
+++ b/allifmaalcommonapp/templates/allifmaalcommonapp/hrm/users/user-details.html
@@ -28,7 +28,7 @@
       <li><a class="dropdown-item" href="{% url 'allifmaalusersapp:changeUserToSupperuserByAdmin' allifquery.customurlslug %}">Supper User: {{allifquery.is_superuser}}</a></li>
       <li><a class="dropdown-item" href="{% url 'allifmaalusersapp:changeUserPasswordByAdmin' allifquery.customurlslug %}">Change Password By Admin</a></li>
       <li><a class="dropdown-item" href="{% url 'allifmaalusersapp:changeYourUserPassword' %}">Change Password</a></li> 
-      <li><a class="dropdown-item" href="{% url 'allifmaalcommonapp:commonWantToDeleteUser' allifquery.id user_var glblslug %}">Delete User</a></li>
+      <li><a class="dropdown-item body-delete-link" href="{% url 'allifmaalcommonapp:commonWantToDeleteUser' allifquery.id user_var glblslug %}">Delete User</a></li>
       <li><a class="dropdown-item" href="{% url 'allifmaalcommonapp:commonStaffLedgerEntries' allifquery.id user_var glblslug %}">Ledger Entries</a></li> 
      
    </div>
